KSENROLL-13292: UI Issue Manage Exam Offering - Action Icons Spacing
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@75693 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -2242,15 +2242,12 @@ padding-left: 0px !important;
   width: 8%;
 }
 
+
 .uif-activity-offering-item-icon {
-  width: 7%;
-}
 
-
-.uif-activity-offering-item-icon > a {
-  margin: 5px;
   margin-right: 0 !important;
   margin-left: 0 !important;
+  padding-right: 5px !important;
 }
 
 
